grails-app/assets/stylesheets/style.css
/* ... */
.navbar.navbar-inverse.navbar-fixed-top.profile-nav{
    padding-bottom: 0px;
}

/* About Page Styles
---------------------------------*/
.about-content{
    margin-top: 100px;
    margin-bottom: 75px;
}

.about-content p{
    margin: 10px auto;
    width: 75%;
}

.about-content a{
    color: #a0a0a2;
}

.navbar.navbar-inverse.navbar-fixed-top{
    margin-bottom: 0px;
    padding-bottom: 10px;
}

.navbar.navbar-inverse.navbar-fixed-top.profile-navbar{
    margin-bottom: 0px;
    padding-bottom: 0px;
}

.about-section{
    color: #b9babe;
}



/* FAQ Page Styles
---------------------------------*/
.faq-content{
    margin-top: 100px;
    margin-bottom: 50px;
}

.policies-content{
    margin-top: 100px;
    margin-bottom: 50px;
}

.policies-content-2{
    width: 75%;
}

.policies-content h5{
	color: #464548;
	font-size: 15px;
}

.question{
    font-weight: bold;
    color: #464548;
}

.question span{
    font-weight: bold;
    color: #464548;
    display: inline;
    padding-right: 5px;
}

ul.faqs{
    padding-top: 20px;
    text-align: left;
    width: 75%;
    margin: 0 auto;
}

.answer{
    color: #a0a0a2;
    padding-left: 20px;
}

.answer p{
    margin-bottom: 20px;
}

.faq-footer{
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    background-color: #fff;
}

.filter-header-checkboxes{
    padding-left: 20px;
}

.disabled {
    pointer-events: none;
    cursor: default;
    opacity: 0.6;
}

a.sub-title.enabled{
    color: #fb4e41;
    display: block;
}


.outer-noscroll{
    background-color: #fff;
    border: 2px solid #fff;
    overflow: hidden;
    text-align: justify; 
}

.inner-noscroll{
    max-height: 175px;
    overflow: auto;
    margin-right: -300px;
    padding-right: 300px; 
}

.dropdown-menu.outer-noscroll{
    max-height: 175px;
}

.settings-input .dropdown-menu.outer-noscroll{
    max-height: 175px;
}

.settings-hint p{
    margin: 0px;
    padding: 0px;
    font-style: italic;
    margin-bottom: 20px;
}

.settings-hint.basics p{
    padding-left: 85px;
}

.settings-hint a{
    color: #fb4e41;
}

.services-header{
    color: #464548;
    font-weight: bold;
    padding-left: 50px;
}

.services-header.price{
    padding-right: 35px;
}

.hours-row{
    margin-bottom: 150px;
}

.settings-dropdown-btn.am, .settings-dropdown-btn.pm{
    width: 17%;
    color: #464548;
    text-align: center;
}

.settings-dropdown-btn.hours-am, .settings-dropdown-btn.hours-pm{ 
    width: 17%;
    color: #464548;
    display: inline;
    text-align: center;
}

.settings-dropdown-btn.hours-am{
    margin-right: 10px;
}

.settings-dropdown-btn.am{
    width: 17%;
    margin-left: 10px;
}

.am-label, .pm-label{
    display: inline;
    color: #464548;
    padding-left: 10px;
}

.pm-col{
    margin-left: -100px;
}

.settings-input .dropdown-menu.outer-noscroll.settings-dropdown-hours-am{
    margin-left: 18px;
    margin-top: -10px;
}

.dropdown-menu.outer-noscroll.settings-dropdown-menu.hours-pm{
    margin-top: -10px;
    margin-left: 122px;
    min-width: 16%;
}

.home-search ul.search-header-checkboxes.dropdown-menu.outer-noscroll li:hover{
    background: white;
}

.form-group{
    margin: 0px;
}

.help-block.with-errors{
    margin: 0px;
    margin-top: 5px;
    color: #a94442;
}

.error-container{
    position: absolute;
    left: 50%;
    top: 0;
}

.error-msg{
    color: #fff;
    background: #fb4e41;
    position: relative;
    left: -50%;
    padding: 10px 15px;
    z-index: 99999999999;
    max-width: 550px;

}

.error-msg.yellow{
    background: #F48F10;
}

.error-msg.yellow{
    background: #F48F10;
}

.close-msg{
    background: url('../img/modal-close.png') no-repeat;
    background-size: cover;
    height: 25px;
    width: 25px;
    border: none;
    float: right;
    margin-right: -50px;
}

.close-msg:focus{
    outline: none;
}

.state-dropdown .help-block.with-errors{
    margin-left: -58px;
}

.dropdown-menu.settings-dropdown-hours-am{
    min-width: 16%;
}

.hours-row .button-group{
    display: inline;
}

.dropdown-menu.outer-noscroll.settings-dropdown-hours-pm{
    min-width: 16%;
    margin-top: -10px;
    margin-left: 208px;
}

.dropdown-menu.outer-noscroll.settings-dropdown-menu.hours-am{
    min-width: 16%;
    margin-top: -10px;
    margin-left: 298px;
}

.dropdown-menu.outer-noscroll.settings-dropdown-menu.hours-am1{
    min-width: 16%;
    margin-top: -10px;
    margin-left: 107px;
}

.profile-photo {
	max-height: 200px;
	max-width: 200px;
}

.emptySearchResults {
	font-size: 14px;
	font-family: 'Open Sans', sans-serif;
	margin-bottom: 350px;
}

.emptySearchResultsLine1 {
	font-size: 16px;
}

